# -terminal-coder

./: README.md
terminal_coder/: .gitignore  BUILD_SYSTEM.md  CROSS_PLATFORM_ARCHITECTURE.md  Dockerfile  README.md  README_LINUX.md  ULTRA_FEATURES_SUMMARY.md  ULTRA_POWER_DOCUMENTATION.md  advanced_cli_core.py  advanced_gui.py  ai_integration.py  build.py  compile.py  config_manager.py  cracker.py  docker-compose.yml  error_handler.py  install-linux.sh  install.py  install.sh  main.py  main_cross_platform.py  make.py  os_detector.py  project_manager.py  pyproject.toml  requirements.txt  run.py  setup.py  test_linux.py  verify_build.py
terminal_coder/.github/workflows/: ci.yml
terminal_coder/linux/: __init__.py  advanced_ai_integration.py  advanced_gui_extensions.py  ai_integration.py  gui.py  main.py  project_manager.py  system_manager.py
terminal_coder/terminal_coder/: __init__.py  advanced_ai_manager.py  advanced_code_analyzer.py  advanced_debugging_profiler.py  ai_integration.py  cli.py  cloud_computing.py  enterprise_project_templates.py  enterprise_security_manager.py  kernel_optimizer.py  linux_optimizer.py  linux_system_manager.py  local_ai_integration.py  main.py  modern_ai_integration.py  modern_tui.py  multimodal_ai.py  neural_acceleration_engine.py  platform_compat.py  project_templates.py  quantum_ai_integration.py  security_manager.py  terminal_3d.py  terminal_coder.tcss  ultra_linux_manager.py
terminal_coder/tests/: __init__.py  test_main.py
terminal_coder/windows/: __init__.py  advanced_ai_integration.py  advanced_gui_extensions.py  ai_integration.py  gui.py  main.py  project_manager.py  system_manager.py
